[Payment Request] Fixes the bug where empty fields were not set in response

Bug: 749209
Change-Id: Ida456ea498c80239eacba68b6192a93a68c48c83
Reviewed-on: https://chromium-review.googlesource.com/587430
Commit-Queue: mahmadi <mahmadi@chromium.org>
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489930}
Former-commit-id: be6aec45460332d3df2bd441120b0eca591a3bf1