chrome/browser/ui/views/payments/payment_request_payment_response_browsertest.cc
@@ -54,12 +54,13 @@ IN_PROC_BROWSER_TEST_F(
                       "\"expiryMonth\": \"11\"", "\"expiryYear\": \"2022\""});
 
   // Test that the billing address was sent to the merchant.
-  ExpectBodyContains({"\"billingAddress\": {", "\"666 Erebus St.\"",
-                      "\"Apt 8\"", "\"city\": \"Elysium\"",
-                      "\"country\": \"US\"", "\"organization\": \"Underworld\"",
-                      "\"phone\": \"+16502111111\"",
-                      "\"postalCode\": \"91111\"",
-                      "\"recipient\": \"John H. Doe\"", "\"region\": \"CA\""});
+  ExpectBodyContains(
+      {"\"billingAddress\": {", "\"666 Erebus St.\"", "\"Apt 8\"",
+       "\"city\": \"Elysium\"", "\"dependentLocality\": \"\"",
+       "\"country\": \"US\"", "\"sortingCode\": \"\"", "\"languageCode\": \"\"",
+       "\"organization\": \"Underworld\"", "\"phone\": \"+16502111111\"",
+       "\"postalCode\": \"91111\"", "\"recipient\": \"John H. Doe\"",
+       "\"region\": \"CA\""});
 }
 
 class PaymentRequestPaymentResponseShippingAddressTest
