components/payments/core/payment_request_data_util_unittest.cc
@@ -34,11 +34,14 @@ TEST(PaymentRequestDataUtilTest, GetPaymentAddressFromAutofillProfile) {
       "{\"addressLine\":[\"666 Erebus St.\",\"Apt 8\"],"
       "\"city\":\"Elysium\","
       "\"country\":\"US\","
+      "\"dependentLocality\":\"\","
+      "\"languageCode\":\"\","
       "\"organization\":\"Underworld\","
       "\"phone\":\"16502111111\","
       "\"postalCode\":\"91111\","
       "\"recipient\":\"John H. Doe\","
-      "\"region\":\"CA\"}",
+      "\"region\":\"CA\","
+      "\"sortingCode\":\"\"}",
       json_address);
 }
 
@@ -59,11 +62,14 @@ TEST(PaymentRequestDataUtilTest, GetBasicCardResponseFromAutofillCreditCard) {
       "{\"addressLine\":[\"666 Erebus St.\",\"Apt 8\"],"
       "\"city\":\"Elysium\","
       "\"country\":\"US\","
+      "\"dependentLocality\":\"\","
+      "\"languageCode\":\"\","
       "\"organization\":\"Underworld\","
       "\"phone\":\"16502111111\","
       "\"postalCode\":\"91111\","
       "\"recipient\":\"John H. Doe\","
-      "\"region\":\"CA\"},"
+      "\"region\":\"CA\","
+      "\"sortingCode\":\"\"},"
       "\"cardNumber\":\"4111111111111111\","
       "\"cardSecurityCode\":\"123\","
       "\"cardholderName\":\"Test User\","
